Added all code blocks for fine-tuning

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -63,7 +63,8 @@
     "from model.local_net import LocalNet\n",
     "from model.model_utils import load_resnet_18_teacher_model\n",
     "from model.student_training_module import StudentTrainingModule\n",
-    "from image_net_data_loader import ImageNetDataModule\n",
+    "from data_loader.image_net_data_loader import ImageNetDataModule\n",
+    "from data_loader.mvtec_data_loader import MVTecDataModule\n",
     "from model.one_layer_decoder import OneLayerDecoder\n",
     "\n",
     "# autoreload imported modules\n",
@@ -480,7 +481,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Load the config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./configs/local_net_fine_tune.yaml', 'r') as f:\n",
+    "    config = yaml.safe_load(f)\n",
+    "\n",
+    "# Reproducibility\n",
+    "pl.seed_everything(config['seed'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load and visualize data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Will provide you with an authentication link\n",
+    "drive.mount('/content/drive')"
    ]
   },
   {
@@ -496,7 +527,316 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp \"/content/drive/MyDrive/AnomalyDetection/Datasets/MVTec/zipper.tar.xz\" \"/content/\""
+    "!cp \"/content/drive/MyDrive/AnomalyDetection/Datasets/MVTec/zipper.tar.xz\" \"/content/\"\n",
+    "# Unzip it\n",
+    "!tar -xf /content/zipper.tar.xz -C /content/\n",
+    "# Remove zip file\n",
+    "!rm -rf zipper.tar.xz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get paths to training images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Specify the directory you want to list\n",
+    "train_directory = '/content/zipper/train/good'\n",
+    "\n",
+    "# Get a list of all files in the train_directory\n",
+    "file_list = [f for f in os.listdir(train_directory) if os.path.isfile(os.path.join(train_directory, f))]\n",
+    "\n",
+    "assert len(file_list) == 240"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Assuming file_paths is your list of 240 image file paths\n",
+    "train_image_paths, val_image_paths = train_test_split(train_directory, test_size=0.1, random_state=config['seed'])  # Adjust test_size as needed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create data module for MVTec AD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_module = MVTecDataModule(\n",
+    "    train_image_paths, \n",
+    "    val_image_paths, \n",
+    "    batch_size=config['batch_size'], \n",
+    "    num_workers=4, \n",
+    "    caching_strategy='at-init'\n",
+    ")\n",
+    "\n",
+    "print(f\"Number of training images: {len(train_image_paths)}\")\n",
+    "print(f\"Number of validation images: {len(val_image_paths)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot patches for Local-Net and ResNet-18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make sure batch_size in data_module is equal to BATCH_SIZE\n",
+    "\n",
+    "BATCH_SIZE=config['batch_size']\n",
+    "\n",
+    "# Reverse the normalization process done by ImageNetDataModule\n",
+    "# to avoid the following error:\n",
+    "# WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
+    "def denormalize(tensor):\n",
+    "    mean = torch.tensor([0.485, 0.456, 0.406]).view(1, 3, 1, 1)\n",
+    "    std = torch.tensor([0.229, 0.224, 0.225]).view(1, 3, 1, 1)\n",
+    "    tensor = tensor * std + mean  # Reverses the normalization in-place\n",
+    "    return tensor.clamp(0, 1)  # Ensures the pixel values are within [0, 1]\n",
+    "\n",
+    "\n",
+    "# Retrieve one batch of images\n",
+    "patch_local, patch_resnet = next(iter(data_module.train_dataloader()))\n",
+    "\n",
+    "# Denormalize the patches for visualization\n",
+    "patch_local = denormalize(patch_local)\n",
+    "patch_resnet = denormalize(patch_resnet)\n",
+    "\n",
+    "fig, ax = plt.subplots(2, BATCH_SIZE, figsize=(20, 8))  # 2 rows, BATCH_SIZE columns\n",
+    "\n",
+    "# Plotting patch_local images in the first row\n",
+    "for i in range(BATCH_SIZE):\n",
+    "    # Permute the tensor to the format (H, W, C)\n",
+    "    image = patch_local[i].permute(1, 2, 0)\n",
+    "\n",
+    "    # Display the image\n",
+    "    ax[0, i].imshow(image.cpu().numpy())\n",
+    "    ax[0, i].axis('off')\n",
+    "\n",
+    "# Plotting patch_resnet images in the second row\n",
+    "for i in range(BATCH_SIZE):\n",
+    "    # Permute the tensor to the format (H, W, C)\n",
+    "    image = patch_resnet[i].permute(1, 2, 0)\n",
+    "\n",
+    "    # Display the image\n",
+    "    ax[1, i].imshow(image.cpu().numpy())\n",
+    "    ax[1, i].axis('off')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard\n",
+    "%tensorboard --logdir lightning_logs/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up all models for fine-tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming 'device' is either 'cuda' if a GPU is available, otherwise 'cpu'\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Load distilled local_net from Google Drive\n",
+    "local_net = LocalNet(config).to(device)\n",
+    "# Load the state dictionary from the saved file\n",
+    "state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Distillation/Trained Models/local_net_distilled_v1.pth', map_location=device)\n",
+    "# Update the local_net model's state dictionary\n",
+    "local_net.load_state_dict(state_dict)\n",
+    "\n",
+    "resnet_18 = load_resnet_18_teacher_model('resnet18-5c106cde.pth', device)\n",
+    "decoder = OneLayerDecoder(config['local_net_output_dimensions'], \n",
+    "                          config['resnet_output_dimensions']).to(device)\n",
+    "\n",
+    "student_train_module = StudentTrainingModule(\n",
+    "    config, \n",
+    "    student_model=local_net, \n",
+    "    teacher_model=resnet_18, \n",
+    "    decoder=decoder, \n",
+    "    mode='finetuning'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate number of epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Given by paper is batch size of 64 for 50k iterations\n",
+    "# Need to calculate max_epochs\n",
+    "total_iterations = config['iterations']\n",
+    "batch_size = config['batch_size']\n",
+    "num_training_images = len(train_image_paths)\n",
+    "# Calculate max_epochs\n",
+    "max_epochs = total_iterations / (num_training_images / batch_size)\n",
+    "max_epochs = int(max_epochs) + (max_epochs % 1 > 0)  # round up if not an integer\n",
+    "print(f\"Calculated max_epochs: {max_epochs}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Crete callbacks for training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pytorch_lightning.callbacks import ModelCheckpoint\n",
+    "\n",
+    "# Setup the checkpoint callback\n",
+    "checkpoint_callback = ModelCheckpoint(\n",
+    "    dirpath=\"/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Checkpoints\",  # Path where checkpoints will be saved\n",
+    "    filename=\"{epoch}-{val_loss:.2f}\",  # Filename template\n",
+    "    monitor=\"val_loss\",  # Metric to monitor for saving\n",
+    "    every_n_epochs=1,  # Save every epoch\n",
+    "    save_weights_only=True  # If True, save only the model weights, not the full model\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup new trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "trainer = pl.Trainer(\n",
+    "    max_epochs=max_epochs,\n",
+    "    accelerator='gpu' if torch.cuda.is_available() else 'cpu',\n",
+    "    devices=1,\n",
+    "    callbacks=[checkpoint_callback],\n",
+    "    logger=[\n",
+    "        pl.loggers.TensorBoardLogger(save_dir='./')\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup trainer from checkpoint\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change <CHECK_POINT.ckpt> to a valid checkpoint file located in\n",
+    "# /content/drive/MyDrive/AnomalyDetection/LocalNet/Checkpoints/\n",
+    "\n",
+    "trainer = pl.Trainer(\n",
+    "    max_epochs=max_epochs,\n",
+    "    accelerator='gpu' if torch.cuda.is_available() else 'cpu',\n",
+    "    devices=1,\n",
+    "    callbacks=[checkpoint_callback],\n",
+    "    resume_from_checkpoint=\"/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Checkpoints/<CHECK_POINT.ckpt>\",\n",
+    "    logger=[\n",
+    "        pl.loggers.TensorBoardLogger(save_dir='./')\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run fine-tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.fit(student_train_module, datamodule=data_module)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save fine-tuned model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(local_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Trained Models/local_net_finetuned.pth')"
    ]
   }
  ],
