Updated callbacks to save top 3, and save last

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -550,10 +550,10 @@
     "import os\n",
     "\n",
     "# Specify the directory you want to list\n",
-    "train_directory = '/content/zipper/train/good'\n",
+    "train_directory = '/content/zipper/train/good/'\n",
     "\n",
     "# Get a list of all files in the train_directory\n",
-    "file_list = [f for f in os.listdir(train_directory) if os.path.isfile(os.path.join(train_directory, f))]\n",
+    "file_list = [train_directory + f for f in os.listdir(train_directory) if os.path.isfile(os.path.join(train_directory, f))]\n",
     "\n",
     "assert len(file_list) == 240"
    ]
@@ -567,7 +567,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Assuming file_paths is your list of 240 image file paths\n",
-    "train_image_paths, val_image_paths = train_test_split(train_directory, test_size=0.1, random_state=config['seed'])  # Adjust test_size as needed"
+    "train_image_paths, val_image_paths = train_test_split(file_list, test_size=0.1, random_state=config['seed'])  # Adjust test_size as needed"
    ]
   },
   {
@@ -587,7 +587,7 @@
     "    train_image_paths, \n",
     "    val_image_paths, \n",
     "    batch_size=config['batch_size'], \n",
-    "    num_workers=4, \n",
+    "    num_workers=2, \n",
     "    caching_strategy='at-init'\n",
     ")\n",
     "\n",
@@ -751,6 +751,9 @@
     "    monitor=\"val_loss\",  # Metric to monitor for saving\n",
     "    every_n_epochs=1,  # Save every epoch\n",
     "    save_weights_only=True  # If True, save only the model weights, not the full model\n",
+    "    save_top_k=3,  # Save the top 3 checkpoints based on val_loss\n",
+    "    save_last=True,  # Also save the last checkpoint to resume training later\n",
+    "    verbose=True  # If True, print a message to stdout for each save\n",
     ")"
    ]
   },
