Small changes to run training

--- a/pretraining_localnet.ipynb
+++ b/pretraining_localnet.ipynb
@@ -740,7 +740,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Crete callbacks for training"
+    "## Create callbacks for training"
    ]
   },
   {
@@ -803,7 +803,7 @@
    "outputs": [],
    "source": [
     "# Change <CHECK_POINT.ckpt> to a valid checkpoint file located in\n",
-    "# /content/drive/MyDrive/AnomalyDetection/LocalNet/Checkpoints/\n",
+    "# /content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Checkpoints\n",
     "\n",
     "trainer = pl.Trainer(\n",
     "    max_epochs=max_epochs,\n",
