Small bug fixes

--- a/training_global_dad.ipynb
+++ b/training_global_dad.ipynb
@@ -269,11 +269,7 @@
     "\n",
     "plt.show()\n",
     "\n",
-    "print(labels)\n",
-    "\n",
-    "for i, mask in enumerate(binary_masks):\n",
-    "    print(f\"Size of binary mask {i}: {mask.size()}\")\n",
-    "    print(f\"Mask {i} values: Unique: {torch.unique(mask)}\")\n"
+    "print(labels)"
    ]
   },
   {
