Added way to load checkpoint to then save model to Google Drive

--- a/training_global_dad.ipynb
+++ b/training_global_dad.ipynb
@@ -446,6 +446,52 @@
     "torch.save(global_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/global_net.pth')\n",
     "torch.save(dad_head.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/dad_head.pth')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to load a certain checkpoint and save the models from that checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load fine-tuned local_net from Google Drive\n",
+    "local_net = LocalNet().to(device)\n",
+    "# Load the state dictionary from the saved file\n",
+    "state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Trained Models/local_net_finetuned.pth', map_location=device)\n",
+    "# Update the local_net model's state dictionary\n",
+    "local_net.load_state_dict(state_dict)\n",
+    "\n",
+    "\n",
+    "global_net = GlobalNet().to(device)\n",
+    "dad_head = DADHead().to(device)\n",
+    "\n",
+    "joint_train_module = JointGlobalDADTrainingModule(\n",
+    "    config, \n",
+    "    local_net=local_net, \n",
+    "    global_net=global_net, \n",
+    "    dad_head=dad_head,  \n",
+    ")\n",
+    "\n",
+    "# Step 2: Load the checkpoint\n",
+    "# Replace '/path/to/checkpoint.ckpt' with the path to your checkpoint file\n",
+    "checkpoint = torch.load(\"/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Checkpoints/epoch=151-val_loss=0.41.ckpt\")\n",
+    "joint_train_module.load_state_dict(checkpoint['state_dict'])\n",
+    "\n",
+    "# Step 3: Extract and save the individual models\n",
+    "# Assuming `global_net` and `dad_head` are attributes of your joint module\n",
+    "global_net = joint_train_module.global_net\n",
+    "dad_head = joint_train_module.dad_head\n",
+    "\n",
+    "# Save the state dictionaries of the individual models\n",
+    "torch.save(global_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/global_net.pth')\n",
+    "torch.save(dad_head.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/dad_head.pth')\n"
+   ]
   }
  ],
  "metadata": {
