Created data loader for inference on MVTec AD

--- a/inference_mvtec.ipynb
+++ b/inference_mvtec.ipynb
@@ -56,6 +56,7 @@
     "from model.dad import DADHead\n",
     "from model.iad import iad_head\n",
     "from model.global_net import GlobalNet\n",
+    "from data_loader.mvtec_inference_data_loader import MVTecInferenceDataModule\n",
     "\n",
     "# autoreload imported modules\n",
     "%load_ext autoreload\n",
@@ -124,10 +125,89 @@
     "# Specify the directory you want to list\n",
     "train_directory = '/content/zipper/test/'\n",
     "\n",
-    "# Get a list of all files in the train_directory\n",
-    "file_list = [train_directory + f for f in os.listdir(train_directory) if os.path.isfile(os.path.join(train_directory, f))]\n",
+    "test_file_paths = []\n",
+    "for root, dirs, files in os.walk(train_directory, topdown=False):\n",
+    "   for name in files:\n",
+    "      test_file_paths.append(os.path.join(root, name))\n",
     "\n",
-    "print(file_list)"
+    "assert len(test_file_paths) == 151\n",
+    "print(test_file_paths)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create dataloader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_module = MVTecInferenceDataModule(\n",
+    "    test_file_paths, \n",
+    "    batch_size=1, \n",
+    "    num_workers=0, \n",
+    "    caching_strategy='none'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display image and its patches and binary masks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make sure batch_size in data_module is equal to BATCH_SIZE\n",
+    "\n",
+    "BATCH_SIZE=1\n",
+    "\n",
+    "# Reverse the normalization process done by data module\n",
+    "# to avoid the following error:\n",
+    "# WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
+    "def denormalize(tensor):\n",
+    "    mean = torch.tensor([0.485, 0.456, 0.406]).view(1, 3, 1, 1)\n",
+    "    std = torch.tensor([0.229, 0.224, 0.225]).view(1, 3, 1, 1)\n",
+    "    tensor = tensor * std + mean  # Reverses the normalization in-place\n",
+    "    return tensor.clamp(0, 1)  # Ensures the pixel values are within [0, 1]\n",
+    "\n",
+    "image, patches, binary_masks = next(iter(data_module.test_dataloader()))\n",
+    "\n",
+    "# Denormalize\n",
+    "for i, patch in enumerate(patches):\n",
+    "  patches[i] = denormalize(patch)\n",
+    "  \n",
+    "\n",
+    "# Plot image\n",
+    "image = image.squeeze(0)\n",
+    "plt.imshow(image.permute(1, 2, 0).cpu().numpy())\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot all (overlapping) patches\n",
+    "fig1, ax1 = plt.subplots(20, 20, figsize=(20, 20))\n",
+    "for j in range(20):\n",
+    "  for i in range(20):\n",
+    "    ax1[j][i].imshow(patches[i+j*20].squeeze(0).permute(1, 2, 0).cpu().numpy())\n",
+    "    ax1[j][i].axis('off')\n",
+    "\n",
+    "# Plot all (overlappin) binary masks\n",
+    "fig2, ax2 = plt.subplots(20, 20, figsize=(20, 20))\n",
+    "for j in range(20):\n",
+    "  for i in range(20):\n",
+    "    ax2[j][i].imshow(binary_masks[i+j*20].squeeze(0).cpu().numpy(), cmap='gray', interpolation='none')\n",
+    "    #ax2[j][i].axis('off')\n",
+    "\n",
+    "plt.show()\n"
    ]
   }
  ],
