--- a/inference_mvtec.ipynb
+++ b/inference_mvtec.ipynb
@@ -57,6 +57,7 @@
     "from model.iad import iad_head\n",
     "from model.global_net import GlobalNet\n",
     "from data_loader.mvtec_inference_data_loader import MVTecInferenceDataModule\n",
+    "from model.anomaly_detector import AnomalyDetector\n",
     "\n",
     "# autoreload imported modules\n",
     "%load_ext autoreload\n",
@@ -159,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Display image and its patches and binary masks"
+    "Display inference images"
    ]
   },
   {
@@ -170,7 +171,33 @@
    "source": [
     "# make sure batch_size in data_module is equal to BATCH_SIZE\n",
     "\n",
-    "BATCH_SIZE=1\n",
+    "BATCH_SIZE=4\n",
+    "\n",
+    "images = next(iter(data_module.test_dataloader()))\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(10, 10))\n",
+    "\n",
+    "for i in range(4):\n",
+    "  ax[i].imshow(images[i].permute(1, 2, 0).cpu().numpy())\n",
+    "\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check that AnomalyDetector creates correct patches and binary masks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anomaly_detector = AnomalyDetector(None, None, None)\n",
+    "patches, binary_masks = anomaly_detector.create_patches_and_masks(images[0])\n",
     "\n",
     "# Reverse the normalization process done by data module\n",
     "# to avoid the following error:\n",
@@ -181,18 +208,15 @@
     "    tensor = tensor * std + mean  # Reverses the normalization in-place\n",
     "    return tensor.clamp(0, 1)  # Ensures the pixel values are within [0, 1]\n",
     "\n",
-    "image, patches, binary_masks = next(iter(data_module.test_dataloader()))\n",
-    "\n",
     "# Denormalize\n",
     "for i, patch in enumerate(patches):\n",
     "  patches[i] = denormalize(patch)\n",
-    "  \n",
     "\n",
     "# Plot image\n",
-    "image = image.squeeze(0)\n",
+    "image = images[0].squeeze(0)\n",
     "plt.imshow(image.permute(1, 2, 0).cpu().numpy())\n",
     "plt.show()\n",
-    "\n",
+    "  \n",
     "# Plot all (overlapping) patches\n",
     "fig1, ax1 = plt.subplots(20, 20, figsize=(20, 20))\n",
     "for j in range(20):\n",
@@ -208,6 +232,57 @@
     "    #ax2[j][i].axis('off')\n",
     "\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create the Anomaly Detector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load all trained models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming 'device' is either 'cuda' if a GPU is available, otherwise 'cpu'\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Load all state dictionary from Google Drive\n",
+    "local_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Trained Models/local_net_finetuned.pth', map_location=device)\n",
+    "global_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V1/global_net.pth', map_location=device)\n",
+    "dad_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V1/dad_head.pth', map_location=device)\n",
+    "\n",
+    "# Initialise all networks\n",
+    "local_net = LocalNet().to(device)\n",
+    "global_net = GlobalNet().to(device)\n",
+    "dad_head = DADHead().to(device)\n",
+    "\n",
+    "# Update all network's state dictionaries\n",
+    "local_net.load_state_dict(local_state_dict)\n",
+    "global_net.load_state_dict(global_state_dict)\n",
+    "dad_head.load_state_dict(dad_state_dict)\n",
+    "\n",
+    "anomaly_detector = AnomalyDetector(local_net, global_net, dad_head).to(device)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anomaly_detector.detect_anomalies(images[0].unsqueeze(0))"
    ]
   }
  ],
