Some sort of anomaly score map, terrible results. Might need to retrain models

--- a/inference_mvtec.ipynb
+++ b/inference_mvtec.ipynb
@@ -272,7 +272,7 @@
     "global_net.load_state_dict(global_state_dict)\n",
     "dad_head.load_state_dict(dad_state_dict)\n",
     "\n",
-    "anomaly_detector = AnomalyDetector(local_net, global_net, dad_head).to(device)\n",
+    "anomaly_detector = AnomalyDetector(local_net, global_net, dad_head)\n",
     "\n"
    ]
   },
@@ -283,6 +283,50 @@
    "outputs": [],
    "source": [
     "anomaly_detector.detect_anomalies(images[0].unsqueeze(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import Normalize\n",
+    "from PIL import Image\n",
+    "\n",
+    "# Assuming images[0] is a tensor of shape [C, H, W] in the range [0, 1]\n",
+    "if images[0].max() > 1:\n",
+    "    images[0] = images[0] / 255.0  # Normalize to [0, 1] if necessary\n",
+    "\n",
+    "# Convert to numpy array and transpose to HWC format for image display\n",
+    "image_np = images[0].cpu().detach().numpy().transpose(1, 2, 0)\n",
+    "image_pil = Image.fromarray((image_np * 255).astype(np.uint8))\n",
+    "\n",
+    "# Assuming 'anomaly_map' is the anomaly map as a 2D numpy array\n",
+    "# Resize anomaly_map to match the original image size\n",
+    "anomaly_map_resized = np.array(Image.fromarray(anomaly_map).resize(image_pil.size, resample=Image.BILINEAR))\n",
+    "\n",
+    "# Normalize the resized anomaly map to the range [0, 1]\n",
+    "normalized_anomaly_map = (anomaly_map_resized - np.min(anomaly_map_resized)) / (np.max(anomaly_map_resized) - np.min(anomaly_map_resized))\n",
+    "\n",
+    "# Apply a colormap to the normalized anomaly map\n",
+    "colormap = plt.cm.hot\n",
+    "normed_data = Normalize(0, 1)(normalized_anomaly_map)\n",
+    "mapped_data = colormap(normed_data)\n",
+    "\n",
+    "# Convert the RGBA image to an RGB image\n",
+    "mapped_data_rgb = (mapped_data[..., :3] * 255).astype(np.uint8)\n",
+    "\n",
+    "# Overlay the colored anomaly map onto the original image\n",
+    "blended_image = Image.blend(image_pil.convert(\"RGBA\"), Image.fromarray(mapped_data_rgb).convert(\"RGBA\"), alpha=0.5)\n",
+    "\n",
+    "# Show the blended image\n",
+    "plt.imshow(blended_image)\n",
+    "plt.axis('off')  # Turn off axis numbers and ticks\n",
+    "plt.show()\n"
    ]
   }
  ],
