--- a/pretraining_localnet.ipynb
+++ b/pretraining_localnet.ipynb
@@ -693,15 +693,19 @@
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# Load distilled local_net from Google Drive\n",
-    "local_net = LocalNet(config).to(device)\n",
+    "local_net = LocalNet().to(device)\n",
     "# Load the state dictionary from the saved file\n",
-    "state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Distillation/Trained Models/local_net_distilled_v1.pth', map_location=device)\n",
+    "local_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Distillation/Trained Models/V2/local_net_distilled_v2.pth', map_location=device)\n",
     "# Update the local_net model's state dictionary\n",
-    "local_net.load_state_dict(state_dict)\n",
+    "local_net.load_state_dict(local_state_dict)\n",
     "\n",
     "resnet_18 = load_resnet_18_teacher_model('resnet18-5c106cde.pth', device)\n",
     "decoder = OneLayerDecoder(config['local_net_output_dimensions'], \n",
     "                          config['resnet_output_dimensions']).to(device)\n",
+    "\n",
+    "decoder_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Distillation/Trained Models/V2/decoder_v2.pth')\n",
+    "\n",
+    "decoder.load_state_dict(decoder_state_dict)\n",
     "\n",
     "student_train_module = StudentTrainingModule(\n",
     "    config, \n",
