--- a/training_global_dad.ipynb
+++ b/training_global_dad.ipynb
@@ -308,7 +308,7 @@
     "# Load fine-tuned local_net from Google Drive\n",
     "local_net = LocalNet().to(device)\n",
     "# Load the state dictionary from the saved file\n",
-    "state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Trained Models/local_net_finetuned.pth', map_location=device)\n",
+    "state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Trained Models/V3/local_net_finetuned_v3.pth', map_location=device)\n",
     "# Update the local_net model's state dictionary\n",
     "local_net.load_state_dict(state_dict)\n",
     "\n",
@@ -365,7 +365,7 @@
     "\n",
     "# Setup the checkpoint callback\n",
     "checkpoint_callback = ModelCheckpoint(\n",
-    "    dirpath=\"/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Checkpoints\",  # Path where checkpoints will be saved\n",
+    "    dirpath=\"/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Checkpoints/V3\",  # Path where checkpoints will be saved\n",
     "    filename=\"{epoch}-{val_loss:.2f}\",  # Filename template\n",
     "    monitor=\"val_loss\",  # Metric to monitor for saving\n",
     "    every_n_epochs=1,  # Save every epoch\n",
@@ -443,8 +443,8 @@
    "outputs": [],
    "source": [
     "trainer.fit(joint_train_module, datamodule=data_module)\n",
-    "torch.save(global_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/global_net.pth')\n",
-    "torch.save(dad_head.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/dad_head.pth')"
+    "torch.save(global_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V3/global_net_v3.pth')\n",
+    "torch.save(dad_head.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V3/dad_head_v3.pth')"
    ]
   },
   {
