Updated file paths

--- a/inference_mvtec.ipynb
+++ b/inference_mvtec.ipynb
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anomaly_detector = AnomalyDetector(None, None, None)\n",
+    "anomaly_detector = AnomalyDetector(None, None, None, automatic_eval=False)\n",
     "patches, binary_masks = anomaly_detector.create_patches_and_masks(images[0])\n",
     "\n",
     "# Reverse the normalization process done by data module\n",
@@ -258,9 +258,9 @@
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# Load all state dictionary from Google Drive\n",
-    "local_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Trained Models/local_net_finetuned.pth', map_location=device)\n",
-    "global_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V1/global_net.pth', map_location=device)\n",
-    "dad_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V1/dad_head.pth', map_location=device)\n",
+    "local_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Trained Models/V4/local_net_finetuned_v4.pth', map_location=device)\n",
+    "global_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V5/global_net_v5.pth', map_location=device)\n",
+    "dad_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V5/dad_head_v5.pth', map_location=device)\n",
     "\n",
     "# Initialise all networks\n",
     "local_net = LocalNet().to(device)\n",
@@ -272,8 +272,7 @@
     "global_net.load_state_dict(global_state_dict)\n",
     "dad_head.load_state_dict(dad_state_dict)\n",
     "\n",
-    "anomaly_detector = AnomalyDetector(local_net, global_net, dad_head)\n",
-    "\n"
+    "anomaly_detector = AnomalyDetector(local_net, global_net, dad_head)\n"
    ]
   },
   {
@@ -282,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anomaly_detector.detect_anomalies(images[0].unsqueeze(0))"
+    "anomaly_score_map = anomaly_detector.detect_anomalies(images[0].unsqueeze(0))"
    ]
   },
   {
