Added code to save model from loaded checkpoint

--- a/pretraining_localnet.ipynb
+++ b/pretraining_localnet.ipynb
@@ -852,6 +852,41 @@
    "source": [
     "torch.save(local_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Trained Models/local_net_finetuned.pth')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save model by first loading given checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_net = LocalNet()\n",
+    "resnet_18 = load_resnet_18_teacher_model('resnet18-5c106cde.pth', device)\n",
+    "decoder = OneLayerDecoder(128, 512)\n",
+    "\n",
+    "student_train_module = StudentTrainingModule(\n",
+    "    config, \n",
+    "    student_model=local_net, \n",
+    "    teacher_model=resnet_18, \n",
+    "    decoder=decoder, \n",
+    "    mode='finetuning'\n",
+    ")\n",
+    "\n",
+    "# Replace with correct checkpoint path\n",
+    "checkpoint = torch.load(\"/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Checkpoints/V4/epoch=3535-val_loss=1890.43.ckpt\")\n",
+    "student_train_module.load_state_dict(checkpoint['state_dict'])\n",
+    "\n",
+    "local_net = student_train_module.student_model\n",
+    "\n",
+    "# Save the state dictionaries of the individual models\n",
+    "torch.save(local_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Trained Models/V4/local_net_finetuned_v4.pth')\n"
+   ]
   }
  ],
  "metadata": {
